Fix in obtaining list of domain users and some sonar fixes