@@ -61,18 +61,18 @@ class NotificationManagerTest {
         when(userService.findAllUsersWithAdminRole()).thenReturn(
                 getAdminUserList().stream()
                         .map(user -> modelMapper.map(user, UserView.class))
-                        .collect(Collectors.toList())
+                        .toList()
         );
         when(userService.findUsersWithRoleSystemAdminAndOperator()).thenReturn(
                 getAdminUserList().stream()
                         .map(user -> modelMapper.map(user, UserView.class))
-                        .collect(Collectors.toList())
+                        .toList()
         );
         when(userService.findAll()).thenReturn(getDefaultUserList());
         when(domainService.findUsersWithDomainAdminRole("domainName")).thenReturn(
                 getAdminUserList().stream()
                         .map(u -> modelMapper.map(u, UserView.class))
-                        .collect(Collectors.toList())
+                        .toList()
         );
         when(userService.findByUsername("ordinary")).thenReturn(Optional.of(getDefaultUserList().get(1)));
 
@@ -237,7 +237,8 @@ class NotificationManagerTest {
 
         List<User> adminUsers = getAdminUserList();
         adminUsers.getFirst().setSelectedLanguage("fr");
-        when(userService.findAllUsersWithAdminRole()).thenReturn(adminUsers.stream().map(u -> this.modelMapper.map(u, UserView.class)).collect(Collectors.toList()));
+        when(userService.findAllUsersWithAdminRole())
+                .thenReturn(adminUsers.stream().map(u -> this.modelMapper.map(u, UserView.class)).toList());
 
         IllegalArgumentException ex = assertThrows(IllegalArgumentException.class, () -> notificationManager.prepareAndSendMail(ma));
         assertEquals("Mail template in language fr cannot be found", ex.getMessage());
@@ -253,7 +254,8 @@ class NotificationManagerTest {
         }});
 
         List<User> adminUsers = getAdminUserList();
-        when(userService.findAllUsersWithAdminRole()).thenReturn(adminUsers.stream().map(u -> this.modelMapper.map(u, UserView.class)).collect(Collectors.toList()));
+        when(userService.findAllUsersWithAdminRole())
+                .thenReturn(adminUsers.stream().map(u -> this.modelMapper.map(u, UserView.class)).toList());
 
         List<String> emails = new ArrayList<>();
         emails.add("email@man.poznan.pl");
